# ssh_honeypot_server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
ssh_honeypot/: __init__.py  main.py
ssh_honeypot/server/: __init__.py  get_ip_info.py  handle_ssh_connection.py  ssh_honeypot_server.py
