[tool.poetry]
name = "ssh-honeypot"
version = "0.1.0"
description = ""
authors = ["Dennis Bakhuis <git@bakhuis.nu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paramiko = "^3.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
